--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= Extracteur d'informations EDT Université de Nantes
+= Extracteur d'informations Celcat Université de Nantes
 
 Permet de récupérer dans l'EDT en ligne le volume horaire d'un intervenant sur une UE à partir du Celcet de l'Université de Nantes.
 
@@ -10,6 +10,10 @@ Il est basé sur l'outil https://gitlab.univ-nantes.fr/bousse-e/edt-extractor
 ```
 $ pip3 install --user ics requests argparse
 ```
+
+https://icspy.readthedocs.io/en/stable/
+https://arrow.readthedocs.io/en/latest/
+
 
 == Usage
 ```
