--- a/exemple.ipynb
+++ b/exemple.ipynb
@@ -43,63 +43,32 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1f0c4534fe043ea82baf8463048d2cd",
+       "model_id": "9d7434bb1dca4bd4a3be647308eb6593",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Text(value='Desmontils', description='Nom:')"
+       "GridspecLayout(children=(Text(value='Desmontils', description='Nom:', layout=Layout(grid_area='widget001')), T…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc17e5342cdf441ea5d2b651c0e91a6d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Text(value='Emmanuel', description='Prénom:')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "293cead5a5fb4deba3480bc7a9a5581e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Go!', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb9d2c28dc744d00b502a68c7725951a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Textarea(value='', disabled=True, layout=Layout(height='300px', width='100%'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BP Desmontils Emmanuel    \n",
+      "Read saved ics  0\n",
+      "Analyse de : <https://edt.univ-nantes.fr/sciences-bis/s85976.ics>\n"
+     ]
     }
    ],
    "source": [
@@ -107,11 +76,27 @@
     "prenom = widgets.Text(value='Emmanuel',description='Prénom:',disabled=False)\n",
     "gonp_btn = widgets.Button(description=\"Go!\")\n",
     "np_lbl = widgets.Textarea(layout=Layout(width='100%', height='300px'),disabled=True )\n",
+    "np_date_deb = widgets.DatePicker(description='Début',disabled=False)\n",
+    "np_date_fin = widgets.DatePicker(description='Fin',disabled=False)\n",
     "def goBP(btn):\n",
-    "    s = doBP(cfg,nom.value,prenom.value,'','', '','',personnel_dpt, tab_module)\n",
+    "    deb, fin = np_date_deb.value, np_date_fin.value\n",
+    "    if deb is None : deb = ''\n",
+    "    else: deb = str(deb)\n",
+    "    if fin is None : fin = ''\n",
+    "    else: fin = str(fin)\n",
+    "    s = doBP(cfg,nom.value,prenom.value,'','', deb,fin,personnel_dpt, tab_module)\n",
     "    np_lbl.value = s\n",
     "gonp_btn.on_click(goBP)\n",
-    "display(nom,prenom,gonp_btn,np_lbl)"
+    "\n",
+    "npd = GridspecLayout(5, 4)\n",
+    "npd[0,0] = nom\n",
+    "npd[1,0] = prenom\n",
+    "npd[2,0] = np_date_deb\n",
+    "npd[3,0] = np_date_fin\n",
+    "npd[4,0] = gonp_btn\n",
+    "npd[:5,1:] = np_lbl\n",
+    "\n",
+    "display(npd)"
    ]
   },
   {
@@ -124,13 +109,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "480316cabf7b4ea3b093b09c50666962",
+       "model_id": "63a9880c84b44862bab22ec23d804f41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,7 +131,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04bd2afa02c145779612baa3931c29c2",
+       "model_id": "837f60aa11624991ba54d010efc71300",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,7 +145,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99839233733b47eab27a671ab7a29325",
+       "model_id": "365795265e644a56b4a1802568c45f65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -175,9 +162,6 @@
      "text": [
       "BM   X21I040   \n",
       "Read saved ics  0\n",
-      "Analyse de : <https://edt.univ-nantes.fr/sciences-bis/m360234.ics>\n",
-      "BM   X21I040   \n",
-      "Read saved ics  0\n",
       "Analyse de : <https://edt.univ-nantes.fr/sciences-bis/m360234.ics>\n"
      ]
     }
@@ -190,6 +174,10 @@
     "    s = doBM(cfg,'','',module.value,'', '', '','',personnel_dpt, tab_module)\n",
     "    m_lbl.value = s\n",
     "gom_btn.on_click(goBM)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "display(module, gom_btn,m_lbl)"
    ]
   },
